--- a/conceptresource/shell-definition.yaml
+++ b/conceptresource/shell-definition.yaml
@@ -2,7 +2,7 @@ tosca_definitions_version: tosca_simple_yaml_1_0
 
 metadata:
   template_name: Conceptresource
-  template_author: Tims@quali.com
+  template_author: Tim.s@quali.com
   template_version: 0.2.0
   template_icon: shell-icon.png
 
