--- a/mockpdu/shell-definition.yaml
+++ b/mockpdu/shell-definition.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 metadata:
-  template_name: Conceptpdu
+  template_name: Mockpdu
   template_author: Tim.s@quali.com
   template_version: 0.2.0
   template_icon: shell-icon.png
@@ -14,7 +14,7 @@ imports:
 
 node_types:
 
-  vendor.switch.Conceptpdu:
+  vendor.switch.Mockpdu:
     derived_from: cloudshell.nodes.PDU
     properties:
       num_ports:
@@ -47,5 +47,5 @@ node_types:
         file: shell-icon.png
         type: tosca.artifacts.File
       driver:
-        file: ConceptpduDriver.zip
+        file: MockpduDriver.zip
         type: tosca.artifacts.File
